fixed margins on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
   background-color: #f6f6fa;
   padding: 40px;
   font-family: "Montserrat", sans-serif;
+  width: fit-content;
 }
 
 /* Wrapper */
